# eagle-control

./: CMakeLists.txt  README.md
inc/core/: Communicator.h  Configurator.h  Core.h  DownloadManager.h
inc/gui/: InterfaceEvents.h  PlannerWidget.h  UserInterface.h
inc/helpers/: Log.h  TimeUtils.h
inc/helpers/math/: Line2D.h  LinePath2D.h  MathUtils.h  Vector2D.h
inc/msgs/: RspMsgs.h
qrc/: main.qml  qml.qrc
src/: main.cpp
src/core/: Communicator.cpp  Configurator.cpp  Core.cpp  DownloadManager.cpp
src/gui/: PlannerWidget.cpp  UserInterface.cpp
src/helpers/: Log.cpp  TimeUtils.cpp
src/helpers/math/: LinePath2D.cpp  MathUtils.cpp
ublox/: conf.txt
ui/: planner_widget.ui  user_interface.ui
